# client-rust-ws

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  clippy.yml  main.yml  rust.yml
.shuttle/: config.toml
src/: access.rs  build.rs  config.rs  error.rs  logging.rs  main.rs  websocket.rs
src/utils/: mod.rs
