[package]
name = "client-rust-ws"
version = "0.1.7"
edition = "2021"
build = "src/build.rs"
rust-version = "1.74.1"

[dependencies]
jwtk = "0.3.0"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
simplelog = "0.12.2"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.2"
chrono = "0.4.38"
clap = { version = "4.3.24", features = ["derive"] }
dotenvy = "0.15.7"

[build-dependencies]
chrono = "0.4.31"
